<resources>
    <string name="app_name">WM</string>
    <string name="str_set">设置</string>
    <string name="str_exit">退出</string>
    <string name="str_start">开始</string>
    <string name="str_startGPS">GPS获取</string>
    <string name="str_startNET">NET获取</string>
    <string name="str_startBDSDK">BD获取</string>
    <string name="str_GetGSMCell">获取基站信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_exit">退出</string>
    <string name="file_open">打开文件</string>
    <string name="file_history">历史记录</string>
    <string name="file_clear_history">清空记录</string>
    <string name="file_openzip">打开压缩文件</string>
    <string name="file_opendir">打开目录</string>

    <!-- 网页浏览 开始-->
    <string name="title_activity_view_web">ViewWebActivity</string>
    <string name="slide_right_go_search">搜索</string>
    <string name="slide_right_cancel">取消</string>
    <string name="slide_right_go">前往</string>

    <string name="refresh">刷新</string>
    <string name="favorite">书签</string>
    <string name="menu_about">关于</string>
    <string name="menu_bookmark_add">添加收藏</string>
    <string name="menu_bookmark_open">书签/历史</string>
    <string name="menu_day">白天</string>
    <string name="menu_exit">退出</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_fav">书签</string>
    <string name="menu_image">图片</string>
    <string name="menu_night">夜晚</string>
    <string name="menu_nocache">无痕模式</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="download">下载</string>
    <string name="slide_right_txtUrl_hint">请输入网址</string>

    <string name="modifyfavorites">修改书签</string>
    <string name="deletefavorites">删除书签</string>
    <string name="deleteAllHistory">清空历史</string>
    <string name="deletehistory">删除历史</string>

    <string name="favname">名称：</string>
    <string name="url">网址：</string>
    <string name="blank"> </string>
    <!-- 网页浏览 结束-->

    <!-- 闹钟 开始-->
    <string name="alarm_title">闹钟</string>
    <string name="no_alarm">点击 + 添加闹钟</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_finish">退出</string>
    <string name="add_alarm">闹钟名</string>
    <string name="details">设置闹钟</string>
    <string name="time">时间</string>
    <string name="repeat">响铃周期</string>
    <string name="wake_method">停闹方式</string>
    <string name="ring_type">响铃方式</string>
    <string name="title_activity_add_alarm">添加闹钟</string>
    <string name="action_discard_alarm">Discard Alarm</string>
    <string name="action_save_alarm">Save Alarm</string>
    <string name="alarm_complete">闹钟时间到</string>
    <string name="answer_hint">答案输在这儿...</string>
    <string name="input_complete">输入好了</string>
    <string name="title_activity_edit_alarm">编辑闹钟</string>
    <!-- 闹钟 结束-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
