<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mx.android.wmapp.activity.GetLocationActivity">

    <Button
        android:id="@+id/btn_startGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/str_startGPS"
        android:weightSum="1" />

    <Button
        android:id="@+id/btn_startNET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/btn_startGPS"
        android:text="@string/str_startNET"
        android:weightSum="1" />

    <Button
        android:id="@+id/btn_startBDSDK"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/btn_startNET"
        android:text="@string/str_startBDSDK"
        android:weightSum="1" />

    <Button
        android:id="@+id/btn_GetGSMCell"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_startBDSDK"
        android:layout_marginTop="20dp"
        android:text="@string/str_GetGSMCell" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_GetGSMCell"
        android:text="@string/hello_world" />
</RelativeLayout>
