<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_back"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_name_title"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/favname"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/dialog_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/blank" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_back"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_url_title"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/url"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/dialog_url_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/blank"
            android:inputType="textUri" />
    </LinearLayout>

</LinearLayout>