<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="5dip">

    <RelativeLayout
        android:id="@+id/title_lay_input_url"
        android:layout_width="fill_parent"
        android:layout_height="36.0dip"
        android:layout_marginLeft="11.0dip"
        android:layout_marginRight="11.0dip"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/search_title_go"
            android:layout_width="55.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_selector"
            android:text="@string/slide_right_go"
            android:textColor="@android:color/black"
            android:textSize="14.0sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/search_title_cancel"
            android:layout_width="55.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_selector"
            android:text="@string/slide_right_cancel"
            android:textColor="@android:color/black"
            android:textSize="14.0sp"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="60.0dip"
            android:background="@drawable/top_title_back">

            <ImageView
                android:id="@+id/title_top_earth"
                android:layout_width="17.0dip"
                android:layout_height="17.0dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="9.5dip"
                android:layout_marginRight="6.5dip"
                android:src="@mipmap/app_web_browser_sm" />

            <TextView
                android:id="@+id/title_top_line"
                android:layout_width="1.0px"
                android:layout_height="20.0dip"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/title_top_earth"
                android:background="#ff979797" />

            <ImageView
                android:id="@+id/search_title_url_clear"
                android:layout_width="17.0dip"
                android:layout_height="17.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11.5dip"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_clear"
                android:visibility="gone" />

            <EditText
                android:id="@+id/search_title_edit"
                style="@style/autocomplete_style"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_toLeftOf="@id/input_url_clear"
                android:layout_toRightOf="@id/title_top_line"
                android:background="#ffececec"
                android:drawablePadding="10.0dip"
                android:hint="@string/slide_right_txtUrl_hint"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textColorHighlight="@color/edittext_color_highlight"
                android:textColorHint="#ffaaaaaa"
                android:textSize="14.0dip" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/index_title_merge_text"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="#ffd7d7d8" />
</LinearLayout>