<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:alpha="1.0"
    android:background="#ffffffff"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/bottom_more_bannerAd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1.0"
        android:background="#ffffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="180.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <RelativeLayout
                    android:id="@+id/popup_setting"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/popupwindow_selector"
                    android:gravity="center"
                    android:paddingBottom="@dimen/menu_padding_bottom"
                    android:paddingTop="@dimen/menu_padding_top">

                    <ImageView
                        android:id="@+id/img_setting"
                        android:layout_width="@dimen/menu_img_size"
                        android:layout_height="@dimen/menu_img_size"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_setting"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7.0dip"
                        android:gravity="center"
                        android:text="@string/menu_settings"
                        android:textColor="@color/popupwindow_item_text"
                        android:textSize="@dimen/menu_text_size" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/more_setting_notice"
                    android:layout_width="12.0dip"
                    android:layout_height="12.0dip"
                    android:layout_gravity="center"
                    android:layout_marginBottom="22.5dip"
                    android:layout_marginLeft="13.5dip"
                    android:src="@mipmap/recommend_red_notice"
                    android:visibility="gone" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/popup_history"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/popupwindow_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:paddingTop="0.0dip">

                <ImageView
                    android:id="@+id/img_history"
                    android:layout_width="@dimen/menu_img_size"
                    android:layout_height="@dimen/menu_img_size"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_history"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7.0dip"
                    android:gravity="center"
                    android:text="@string/menu_history"
                    android:textColor="@color/popupwindow_item_text"
                    android:textSize="@dimen/menu_text_size" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="180.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/popup_model"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/popupwindow_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:paddingTop="@dimen/menu_padding_top">

                <ImageView
                    android:id="@+id/img_model"
                    android:layout_width="@dimen/menu_img_size"
                    android:layout_height="@dimen/menu_img_size"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_day" />

                <TextView
                    android:id="@+id/popup_model_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_model"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7.0dip"
                    android:gravity="center"
                    android:text="@string/menu_day"
                    android:textColor="@color/popupwindow_item_text"
                    android:textSize="@dimen/menu_text_size" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <RelativeLayout
                    android:id="@+id/popup_image"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/popupwindow_selector"
                    android:gravity="center"
                    android:paddingBottom="@dimen/menu_padding_bottom"
                    android:paddingTop="0.0dip">

                    <ImageView
                        android:id="@+id/img_image"
                        android:layout_width="@dimen/menu_img_size"
                        android:layout_height="@dimen/menu_img_size"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_photo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7.0dip"
                        android:gravity="center"
                        android:text="@string/menu_image"
                        android:textColor="@color/popupwindow_item_text"
                        android:textSize="@dimen/menu_text_size" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/more_image_notice"
                    android:layout_width="12.0dip"
                    android:layout_height="12.0dip"
                    android:layout_gravity="center"
                    android:layout_marginBottom="27.5dip"
                    android:layout_marginLeft="13.5dip"
                    android:src="@mipmap/recommend_red_notice"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="180.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/popup_share"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/popupwindow_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:paddingTop="@dimen/menu_padding_top">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="@dimen/menu_img_size"
                    android:layout_height="@dimen/menu_img_size"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/menu_share_none" />

                <TextView
                    android:id="@+id/img_share_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_share"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7.0dip"
                    android:gravity="center"
                    android:text="@string/menu_share"
                    android:textColor="@color/popupwindow_item_text"
                    android:textSize="@dimen/menu_text_size" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <RelativeLayout
                    android:id="@+id/popul_no_cache"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/popupwindow_selector"
                    android:gravity="center"
                    android:paddingBottom="@dimen/menu_padding_bottom"
                    android:paddingTop="0.0dip">

                    <ImageView
                        android:id="@+id/no_cache_image"
                        android:layout_width="@dimen/menu_img_size"
                        android:layout_height="@dimen/menu_img_size"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/no_cache_none" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/no_cache_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7.0dip"
                        android:gravity="center"
                        android:text="@string/menu_nocache"
                        android:textColor="@color/popupwindow_item_text"
                        android:textSize="@dimen/menu_text_size" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/no_cache_image_notice"
                    android:layout_width="12.0dip"
                    android:layout_height="12.0dip"
                    android:layout_gravity="center"
                    android:layout_marginBottom="22.5dip"
                    android:layout_marginLeft="13.5dip"
                    android:src="@mipmap/recommend_red_notice"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="180.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/popup_open_bookmark"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/popupwindow_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:paddingTop="@dimen/menu_padding_top">

                <ImageView
                    android:id="@+id/img_open_bookmark"
                    android:layout_width="@dimen/menu_img_size"
                    android:layout_height="@dimen/menu_img_size"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_bookmark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_open_bookmark"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7.0dip"
                    android:gravity="center"
                    android:text="@string/menu_bookmark_open"
                    android:textColor="@color/popupwindow_item_text"
                    android:textSize="@dimen/menu_text_size" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <RelativeLayout
                    android:id="@+id/popup_download"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/popupwindow_selector"
                    android:gravity="center"
                    android:paddingBottom="@dimen/menu_padding_bottom"
                    android:paddingTop="0.0dip">

                    <ImageView
                        android:id="@+id/img_download"
                        android:layout_width="@dimen/menu_img_size"
                        android:layout_height="@dimen/menu_img_size"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_download" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_download"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7.0dip"
                        android:gravity="center"
                        android:text="@string/download"
                        android:textColor="@color/popupwindow_item_text"
                        android:textSize="@dimen/menu_text_size" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/more_download_notice"
                    android:layout_width="12.0dip"
                    android:layout_height="12.0dip"
                    android:layout_gravity="center"
                    android:layout_marginBottom="27.5dip"
                    android:layout_marginLeft="13.5dip"
                    android:src="@mipmap/recommend_red_notice"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="180.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/popup_add_bookmark"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/popupwindow_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:paddingTop="@dimen/menu_padding_top">

                <ImageView
                    android:id="@+id/img_add_bookmark"
                    android:layout_width="@dimen/menu_img_size"
                    android:layout_height="@dimen/menu_img_size"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_bookmark_add" />

                <TextView
                    android:id="@+id/add_bookmark_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_add_bookmark"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7.0dip"
                    android:gravity="center"
                    android:text="@string/menu_bookmark_add"
                    android:textColor="@color/popupwindow_item_text"
                    android:textSize="@dimen/menu_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/popup_exit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/popupwindow_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:paddingTop="0.0dip">

                <ImageView
                    android:id="@+id/img_exit"
                    android:layout_width="@dimen/menu_img_size"
                    android:layout_height="@dimen/menu_img_size"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_exit"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7.0dip"
                    android:gravity="center"
                    android:text="@string/menu_exit"
                    android:textColor="@color/popupwindow_item_text"
                    android:textSize="@dimen/menu_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
